# guwen-reactor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
app/: approval.py  cli.py  mcp_server.py  policy_gate.py  render_canvas.py
data/gold/: canon_gold.yaml  independent_check_notes.md  tier2_registry.yaml
docs/: build_log.md  capstone_writeup.md
evals/: run_eval_suite.py  test_approval_export.py  test_canvas.py  test_claim_validator.py  test_coverage.py  test_drift_injection.py  test_e2e.py  test_env.py  test_evaluate_run.py  test_mcp_server.py  test_policy_gate.py  test_regen_loop_blocks_then_passes.py  test_safe_prompt.py  test_safety_eval.py  test_schema.py  test_source_sanitizer.py  test_specificity.py  test_structural_audit.py  test_workflow_integrity.py
guwen_core/: adaptation_gen.py  artifact_store.py  claim_validator.py  coverage.py  drift_injector.py  export_bundle.py  regen_loop.py  safe_prompt.py  safety_eval.py  schema_validator.py  source_sanitizer.py  structural_audit.py  trace.py  workflow_integrity.py
reviews/: 2026-06-28-goal-spec-adversarial.md  2026-07-01-proto-bc-codex-critique-theatre.md  2026-07-01-proto-bc-synthesis.md  2026-07-02-map-critique-theatre.md  2026-07-04-demo-narrative-impeccable.md  2026-07-04-demo-review-SYNTHESIS.md  2026-07-04-writeup-redteam.md  2026-07-06-fable5-submission-review.md  tier2-verification-2026-07-02.md
specs/: behavior.feature  demo_script.md  eval_plan.yaml  product_spec.md  threat_model.md  writeup_outline.md
tools/: build_geo.py  subset_chars.txt  subset_font.py
(+117 files in other folders)
